# pet_project_simple_chat

./: azure-pipelines.yml
project_for_evraz/: user_actions.puml
project_for_evraz/components/chat_backend/: setup.cfg
project_for_evraz/components/chat_backend/simple_chat/adapters/chat_api/: app.py  auth.py  controllers.py  settings.py
project_for_evraz/components/chat_backend/simple_chat/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
project_for_evraz/components/chat_backend/simple_chat/application/: dataclasses.py  errors.py  interfaces.py  services.py
project_for_evraz/components/chat_backend/simple_chat/composites/: chat_api.py
project_for_evraz/components/chat_backend/simple_chat/database/: database.py
project_for_evraz/components/chat_backend/simple_chat/tests/: conftest.py  tests.py
project_for_evraz/docs/: db_scheme.puml  user_actions.puml
simple_chat_pet_project/: README.md
simple_chat_pet_project/components/chat_backend/simple_chat/: README.md
simple_chat_pet_project/components/chat_backend/simple_chat/adapters/chat_api/: controllers.py
simple_chat_pet_project/components/chat_backend/simple_chat/adapters/database/: mapping.py  settings.py
simple_chat_pet_project/components/chat_backend/simple_chat/application/: interfaces.py
simple_chat_pet_project/components/chat_backend/simple_chat/composites/: chat_api.py
simple_chat_pet_project/components/chat_backend/simple_chat/tests/: conftest.py  tests.py
simple_chat_pet_project/docs/: db_scheme.puml
